--- a/SampleProject/src/main/res/values/strings.xml
+++ b/SampleProject/src/main/res/values/strings.xml
@@ -4,5 +4,8 @@
     <string name="app_name">SampleProject</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="public_infra">Public Infrastructure</string>
+    <string name="public_infra_repair">Repair and Maintenance -  Public Infrastructure</string>
+    <string name="title_activity_saro_retrieval">SARO Retrieval</string>
 
 </resources>
